name:                hi
version:             0.1.0.0
homepage:            https://github.com/matsubara0507/hi#readme
license:             MIT
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2017 MATSUBARA Nobutada
category:            Editor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hi
